--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,17 +1,19 @@
 Package: augmentR
-Type: Package
-Title: Additional Utility and Calculatory Functions
 Version: 0.0.2.0
+Date: 2018-05-02
+Title: Additional Utility and Calculatory Functions
 Authors@R: person("Christopher", "Kittrell", email = "ckittrell@knowesis-inc.com", role = c("aut"))
   person("Mike", "DeCarlo", email = "mdecarlo@knowesis-inc.com", role = c("aut", "cre"))
+Author: Mike DeCarlo [aut, cre],
+  Chris Kittrell [aut]
+Maintainer: Mike DeCarlo <decarlo.michael.j@gmail.com>
+Depends: R (>= 3.4), grid
+Suggests: ggplot2
 Description: Additional utilities that are not included in base R.
   The {augmentR} package for R contains several, one-off tools that augment the functionality provided by base R. This collection of functions are utility or calculatory in nature.
-Depends: R (>= 3.4)
 License: file LICENSE
+URL: https://github.com/wolfm4ne/augmentR
+BugReports: https://github.com/wolfm4ne/augmentR
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
-Imports:
-  grid
-Suggests:
-  ggplot2
