--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,4 +5,10 @@ export(multi.plot)
 export(st.err)
 export(use.pack)
 export(use.packs)
-import(grid)
+importFrom(grid,grid.layout)
+importFrom(grid,grid.newpage)
+importFrom(grid,pushViewport)
+importFrom(grid,viewport)
+importFrom(stats,sd)
+importFrom(utils,install.packages)
+importFrom(utils,installed.packages)
