--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -12,8 +12,8 @@ Suggests: ggplot2
 Description: Additional utilities that are not included in base R.
   The {augmentR} package for R contains several, one-off tools that augment the functionality provided by base R. This collection of functions are utility or calculatory in nature.
 License: file LICENSE
-URL: https://github.com/wolfm4ne/augmentR
-BugReports: https://github.com/wolfm4ne/augmentR
+URL: https://github.com/mike-decarlo/augmentR
+BugReports: https://github.com/mike-decarlo/augmentR
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.0.1.9000
