added left and right functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,9 @@
 export("%out%")
 export(insertOutAddin)
 export(inst.packs)
+export(left)
 export(multi.plot)
+export(right)
 export(st.err)
 export(use.pack)
 export(use.packs)
