Edited depends and added imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,8 +7,13 @@ Authors@R: person("Christopher", "Kittrell", email = "ckittrell@knowesis-inc.com
 Author: Mike DeCarlo [aut, cre],
   Chris Kittrell [aut]
 Maintainer: Mike DeCarlo <mikedecarlo.rdev@gmail.com>
-Depends: R (>= 3.4), grid, stats, utils
-Suggests: ggplot2
+Depends: R (>= 3.4)
+Imports: 
+  grid,
+  stats,
+  utils
+Suggests: 
+  ggplot2
 Description: Additional utilities that are not included in base R.
   The {augmentR} package for R contains several, one-off tools that augment the functionality provided by base R. This collection of functions are utility or calculatory in nature.
 License: file LICENSE
@@ -16,4 +21,4 @@ URL: https://github.com/mike-decarlo/augmentR
 BugReports: https://github.com/mike-decarlo/augmentR
 Encoding: UTF-8
 LazyData: true
-RoxygenNote: 6.0.1.9000
+RoxygenNote: 6.1.0.9000
