more lintr recs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,7 +7,7 @@ export(left)
 export(multi_plot)
 export(right)
 export(st_err)
-export(use.pack)
+export(use_pack)
 export(use_packs)
 importFrom(grid,grid.layout)
 importFrom(grid,grid.newpage)
