--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ importFrom(grid,grid.layout)
 importFrom(grid,grid.newpage)
 importFrom(grid,pushViewport)
 importFrom(grid,viewport)
+importFrom(rstudioapi,insertText)
 importFrom(stats,sd)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
