added sort_cols() with code, export, documentation, and testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(inst_packs)
 export(left)
 export(multi_plot)
 export(right)
+export(sort_cols)
 export(st_err)
 export(use_pack)
 export(use_packs)
