support for utils::new.packages()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,3 +18,4 @@ importFrom(rstudioapi,insertText)
 importFrom(stats,sd)
 importFrom(utils,install.packages)
 importFrom(utils,installed.packages)
+importFrom(utils,new.packages)
