remove covr from suggested packages

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,8 +16,7 @@ Imports:
   devtools
 Suggests: 
   ggplot2,
-  testthat,
-  covr
+  testthat
 Description: Additional utilities that are not included in base R.
   The {augmentr} package for R contains several, one-off tools that augment the functionality provided by base R. This collection of functions are utility or calculatory in nature.
 License: file LICENSE
