--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,7 @@
 export("%out%")
 export(insert_out_addin)
 export(insert_tilda_addin)
-export(inst_packs)
+export(install_packs)
 export(left)
 export(multi_plot)
 export(right)
